Refactor code structure for improved readability and maintainability

--- a/public/admin.html
+++ b/public/admin.html
@@ -50,6 +50,7 @@
           </div>
 
           <a href="admin.html" style="display: none"><li>Admin</li></a>
+          <a href="profile.html" style="display: none"><li>Profile</li></a>
           <li>
             <button
               onclick="handleSignOut()"
@@ -87,6 +88,7 @@
           </div>
 
           <a href="admin.html" style="display: none"><li>Admin</li></a>
+          <a href="profile.html" style="display: none"><li>Profile</li></a>
           <li>
             <button
               onclick="handleSignOut()"
