--- a/public/articles.html
+++ b/public/articles.html
@@ -154,7 +154,7 @@
       <h1>Articles</h1>
       <div id="articlesContainer"></div>
     </main>
-    <script src="./scripts/script.js"></script>
+    <script src="./scripts/script.js" type="module"></script>
 
     <script src="./scripts/footer.js"></script>
     <script src="./scripts/grid.js"></script>
