--- a/public/index.html
+++ b/public/index.html
@@ -74,11 +74,13 @@
               <a href="base64.html">Base64 image encoder - decoder</a>
               <a href="kanban.html">Kanban Task Manager</a>
               <a href="qr_code_generator.html">QR code generator</a>
-              <a href="custom-document-signing.html">Document Signing</a>
+              <a href="document-dashboard.html">Document Dashboard</a>
+              <a href="sign-document.html">Sign Document</a>
             </div>
           </div>
 
           <a href="admin.html" style="display: none"><li>Admin</li></a>
+          <a href="profile.html" style="display: none"><li>Profile</li></a>
           <li>
             <button
               onclick="handleSignOut()"
@@ -116,6 +118,7 @@
           </div>
 
           <a href="admin.html" style="display: none"><li>Admin</li></a>
+          <a href="profile.html" style="display: none"><li>Profile</li></a>
           <li>
             <button
               onclick="handleSignOut()"
@@ -1141,7 +1144,7 @@
       }
     </script>
 
-    <script src="./scripts/script.js"></script>
+    <script src="./scripts/script.js" type="module"></script>
     <script src="./scripts/footer.js"></script>
     <script src="./scripts/grid.js"></script>
   </body>
