--- a/public/signin.html
+++ b/public/signin.html
@@ -280,6 +280,7 @@
           </div>
 
           <a href="admin.html" style="display: none"><li>Admin</li></a>
+          <a href="profile.html" style="display: none"><li>Profile</li></a>
           <li>
             <button
               onclick="handleSignOut()"
@@ -317,6 +318,7 @@
           </div>
 
           <a href="admin.html" style="display: none"><li>Admin</li></a>
+          <a href="profile.html" style="display: none"><li>Profile</li></a>
           <li>
             <button
               onclick="handleSignOut()"
