--- a/public/about.html
+++ b/public/about.html
@@ -198,7 +198,7 @@
     </main>
     <div class="grid"></div>
 
-    <script src="./scripts/script.js"></script>
+    <script src="./scripts/script.js" type="module"></script>
     <script src="./scripts/footer.js"></script>
     <script src="./scripts/grid.js"></script>
   </body>
