--- a/public/base64.html
+++ b/public/base64.html
@@ -468,7 +468,7 @@
       }
     </script>
     <div class="grid"></div>
-    <script src="./scripts/script.js"></script>
+    <script src="./scripts/script.js" type="module"></script>
     <script src="./scripts/footer.js"></script>
     <script src="./scripts/grid.js"></script>
   </body>
