--- a/public/cubic_bezier.html
+++ b/public/cubic_bezier.html
@@ -857,7 +857,7 @@
       // ]]>
     </script>
     <script src="./scripts/script.js" type="module"></script>
-    <script src="./scripts/script.js"></script>
+    <script src="./scripts/script.js" type="module"></script>
     <script src="./scripts/footer.js"></script>
     <script src="./scripts/grid.js"></script>
   </body>
