--- a/public/gantt_editor.html
+++ b/public/gantt_editor.html
@@ -936,7 +936,7 @@
       loadLastGanttChart();
       buildGanttChart();
     </script>
-    <script src="./scripts/script.js"></script>
+    <script src="./scripts/script.js" type="module"></script>
     <script src="./scripts/footer.js"></script>
     <script src="./scripts/grid.js"></script>
   </body>
