--- a/public/services.html
+++ b/public/services.html
@@ -348,7 +348,7 @@
       </div>
     </main>
     <div class="grid"></div>
-    <script src="./scripts/script.js"></script>
+    <script src="./scripts/script.js" type="module"></script>
     <script src="./scripts/footer.js"></script>
     <script src="./scripts/grid.js"></script>
     <script type="module" src="./scripts/script.js"></script>
