--- a/public/document-dashboard.html
+++ b/public/document-dashboard.html
@@ -136,6 +136,9 @@
     <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-functions-compat.js"></script>
     <script src="config/firebase-config.js"></script>
+    <!-- Enhanced signature storage -->
+    <script src="js/signature-storage.js"></script>
+    <script src="js/signature-manager.js"></script>
     <script src="js/document-dashboard.js"></script>
   </body>
 </html>
